--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         body {
             text-align: center;
             color:aliceblue; 
-            background-image: url("Background.jpg");
+            background-image: url("Background.JPG");
             background-repeat: no-repeat;
             background-size: 100% fill;
             font: 36px Gotham medium, sans-serif ;
